--- a/prepros.cfg
+++ b/prepros.cfg
@@ -166,6 +166,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "68f556d4": {
+          "id": "68f556d4",
+          "path": "contacto.html",
+          "output": "contacto.html",
+          "name": "contacto.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
