Pagina Base de prueba

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -132,19 +132,6 @@
           "parents": [],
           "type": "css"
         },
-        "c6a41368": {
-          "id": "c6a41368",
-          "path": "assets/dosMovil.jpg",
-          "output": "assets/dosMovil.jpg",
-          "name": "dosMovil.jpg",
-          "category": "IMAGE",
-          "size": 134981,
-          "type": "jpg",
-          "initialSize": 134981,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "84c153e2": {
           "id": "84c153e2",
           "path": "sobreNosotros.html",
@@ -177,6 +164,48 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "c6a41368": {
+          "id": "c6a41368",
+          "path": "assets/dosMovil.jpg",
+          "output": "assets/dosMovil.jpg",
+          "name": "dosMovil.jpg",
+          "category": "IMAGE",
+          "size": 801870,
+          "type": "jpg",
+          "initialSize": 801870,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "762c49fa": {
+          "id": "762c49fa",
+          "path": "assets/logo.png",
+          "output": "assets/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 4264,
+          "type": "png",
+          "initialSize": 4264,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9246366a": {
+          "id": "9246366a",
+          "path": "js/map.js",
+          "output": "js/map-dist.js",
+          "name": "map.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
